# carerr-ai

./: .gitignore  API使用说明.txt  README.md  deploy.sh  docker-compose.yml  部署操作流程.txt
career-agent/: .dockerignore  .gitignore  Dockerfile  api.py  auth.py  career_main.py  main.py  pyproject.toml
career-agent/_misc/: REBUILD_GUIDE.md  bug_list.txt  mock输入  mock输入.json  构建思路.txt
career-agent/_misc/output-temp/: abilities.json  interests.json  knowledge.json  report_515525e20cab.txt  report_周启航.md  skills.json  work_styles.json  work_values.json
career-agent/_misc/职业规划/: 第一部分-职业选择  (+1 more)
career-agent/agent/: agent.py  agent_config.py  learn_plan_db.py  learn_plan_helpers.py  learn_plan_schema.py  logger.py  runner.py
career-agent/db/: build_onet_occupation_vectors.py  embed_onet_to_qdrant.py  schema.sql
career-agent/scoring_tables/: agent2_skills_scoring_table.json  agent3_knowledge_scoring_table.json  agent4_abilities_scoring_table.json  agent6_interests_scoring_table.json
career-agent/test/: export_report.py  test_agent.py  test_api.py  test_archive.py  test_assessment.py  test_assessment_agent.py  test_career.py  test_career_plan.py  test_delegate.py  test_llm.py  test_mcp.py  test_memory.py  test_registry.py  test_runner.py  test_trace.py
career-agent/tests/: test_action_plan.py  test_api_e2e.py  test_auth.py  test_career_path.py  test_career_plan.py  test_chat_tools.py  test_context.py  test_learn_plan_e2e.py  test_learn_plan_helpers.py
career-db-service/: .dockerignore  Dockerfile  main.py  pyproject.toml
career-db-service/app/: config.py  database.py
(+128 files in other folders)
