[project]
name = "career-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "bcrypt>=4.0.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "litellm>=1.82.6",
    "mcp>=1.26.0",
    "mcp-client>=0.0.0",
    "openai>=2.30.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "pypdf>=5.0.0",
    "python-multipart>=0.0.12",
    "pyjwt>=2.10.0",
    "qdrant-client>=1.17.1",
    "redis[hiredis]>=5.0.0",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
